--- a/README
+++ b/README
@@ -5,3 +5,4 @@ This idea is more a proof of concept than anything else. You feed an image into 
 
 What's the use of it? There aren't many really. As I said, it's more a proof of concept. It has been suggested for use as a signature for emails as that way an image blocker won't stop it from displaying.
 
+Examples: cheetah.html and panda.html are examples of what it can generate. Please be aware that cheetah.html is a HUGE file and it WILL slow down your browser. I suggest playing with panda.html first.
